force-app/main/modules/dutchBusiness/objects/Business_Person__c/Business_Person__c.object-meta.xml
<CustomObject>
    <description>A person who holds a position within a business (dossier).</description>
    <label>Business Person</label>
    <nameField>
        <label>Business Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>