force-app/main/modules/dutchBusiness/objects/Business_Person__c/fields/Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Birth__c</fullName>
    <description>The country this person was born in.</description>
    <label>Country of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>