force-app/main/modules/dutchBusiness/objects/Business_Person__c/fields/Date_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Date_Deceased__c</fullName>
    <description>The date this business person deceased</description>
    <label>Date Deceased</label>
    <type>Date</type>
</CustomField>