force-app/main/modules/dutchBusiness/objects/Business_Person__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>The date of birth of the business person.</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>