force-app/main/modules/dutchBusiness/objects/Business_Person__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>The first name of the person</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>