force-app/main/modules/dutchBusiness/objects/Business_Person__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>The gender of the business person, either Male (m) or Female(f)</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>m</fullName>
            </value>
            <value>
                <fullName>f</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>