force-app/main/modules/dutchBusiness/objects/Business_Person__c/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <description>The initials of the Business Person.</description>
    <label>Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>