force-app/main/modules/dutchBusiness/objects/Business_Person__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>The last name of the person</description>
    <label>Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>