force-app/main/modules/dutchBusiness/objects/Business_Person__c/fields/Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth__c</fullName>
    <description>The place / city this business person was born in.</description>
    <label>Place of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>