force-app/main/modules/dutchBusiness/objects/Business_Person__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of a Business Person</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>